# xiaozhi-rs

./: .gitignore  README.md  justfile
.cargo/: config.toml
.zed/: settings.json
audiopus_sys/: Cargo.toml  build.rs  flake.nix
audiopus_sys/.cargo/: config.toml
audiopus_sys/esp-opus/: CMakeLists.txt
audiopus_sys/opus/: CMakeLists.txt
audiopus_sys/src/: lib.rs
firmware/: Cargo.toml  diagram.json  wokwi.toml
firmware/.cargo/: config.toml
firmware/.zed/: settings.json
firmware/src/: audio.rs  codec.rs  lib.rs  macro.rs  net.rs  p3.rs  proto.rs  util.rs  wifi.rs
firmware/src/proto/: mqtt_udp.rs  websocket.rs
opus-rs/: Cargo.toml  flake.nix  rustfmt.toml
opus-rs/src/: lib.rs
opus-rs/tests/: stream.rs
server/: audio.py  main.py  requirements.txt  udp.py  util.py
